log/build_2025-04-28_20-57-18/robina_rfid/stderr.log
  File "/home/peko/colcon_ws/install/robina_rfid/lib/python3.12/site-packages/robina_rfid/rfid_reader.py", line 1
    kimport rclpy
            ^^^^^
SyntaxError: invalid syntax

